grml-live (0.0.13) unstable; urgency=low

  * Replace mailx with bsd-mailx in GRML_FULL.
    http://packages.qa.debian.org/b/bsd-mailx/news/20071209T135336Z.html

 -- Michael Prokop <mika@grml.org>  Sun, 09 Dec 2007 22:38:31 +0100

grml-live (0.0.12) unstable; urgency=low

  * Log mkisofs command with quotes around version number for easier
    copy/paste.
  * Ship syslinux files via template directory because the syslinux
    version (1:3.31-4) in Debian/etch is broken. :(
    Drop syslinux from Depends.
  * Mention -u option if using the option by accident and the chroot
    does not exist yet.
  * Update buildd/cleanup.sh and add buildd/files/.logo.png, 
    buildd/files/.style.css, buildd/files/HEADER.html and
    buildd/link_latest.sh (create symlinks for latest snapshot ISOs)
    and provide upload_logs().
  * Generate md5sum of ISO if using class 'RELEASE'.
  * Do not install package 'grml' via GRMLBASE because we want
    to use grml-small in GRML_SMALL and GRML_MEDIUM.
  * Remove and recreate /root directory in 98-clean-chroot.
  * Skip stage updatebase when using softupdate and handle upgrade
    on our own via hooks.
  * Execute removal of log files after sourcing config files.

 -- Michael Prokop <mika@grml.org>  Sun, 09 Dec 2007 17:28:01 +0100

grml-live (0.0.11) unstable; urgency=low

  * New option -z to use ZLIB instead of LZMA compression and
    support SQUASHFS_OPTIONS in configuration file.
  * Add new class XORG.
  * Add X.org packages to GRML_MEDIUM.
  * Make sure /etc/X11/X is not a symlink to /bin/true. Check and fix
    via /etc/grml/fai/config/scripts/GRMLBASE/32-xorg.
  * Adjust grml-buildd for new logdir structure.
  * Add new script /etc/grml/fai/config/scripts/GRMLBASE/40-deborphan
    which adds shadowfs and bsdtar to the 'never report'-list of deborphan.
  * Diplay use of $LOCAL_CONFIG in configuration dialog.
  * Remove fai's last-dirinstall and last-softupdate when using
    ZERO_FAI_LOGFILE as well.